# LipSync

./: .gitignore  LICENSE  README.md  install.md
Assets/LipSync/AudioVisual/: AudioVisual.mat  AudioVisual.renderTexture
Assets/LipSync/Demo/Animations/: UnityChanLipSyncAnimator.controller
Assets/LipSync/Demo/Models/Materials/: PlaneMaterial.mat
Assets/LipSync/Demo/Prefabs/: UnityChanLipSync.prefab  UnityChanTemplate.prefab
Assets/LipSync/Demo/Scenes/: AudioScene.unity  FmodScene.unity
Assets/LipSync/Editor/: BakingEditorWindow.cs  GenerateLipAnimWindow.cs  LipSyncEditor.cs  LipSyncOfflineRecognizer.cs  LpcEditor.cs  recd.txt  recd_.anim
Assets/LipSync/Plugins/ZSolver.bundle/Contents/: Info.plist
Assets/LipSync/Plugins/ZSolver.bundle/Contents/MacOS/: ZSolver
Assets/LipSync/Scripts/: AudioLipSync.cs  AudioVisualization.cs  FmodLipSync.cs  LipSync.cs  Visualization.cs
Assets/LipSync/Scripts/Core/: Complex.cs  LipSyncRecognizer.cs  LipSyncRuntimeRecognizer.cs  LpcModel.cs  MathToolBox.cs  ToeplitzMatrix.cs
Assets/LipSyncLite/Demo/Models/Materials/: BackgroundMaterial.mat
Assets/LipSyncLite/Demo/Scenes/: AudioScene.unity  FmodScene.unity
Assets/LipSyncLite/Editor/: FmodLipSyncEditor.cs  LipSyncEditor.cs
Assets/LipSyncLite/Scripts/: AudioLipSync.cs  FmodLipSync.cs  FmodTest.cs  LipSync.cs
Assets/LipSyncLite/Scripts/Core/: LipSyncRuntimeRecognizer.cs
Assets/UnityChan/Models/: unitychan.fbx
Assets/UnityChan/Scripts/: AutoBlink.cs  RandomWind.cs  SpringBone.cs  SpringCollider.cs  SpringManager.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset  UnityConnectSettings.asset
zsolve/: .gitignore  CMakeLists.txt  generate_android.sh  generate_ios.sh  generate_osx.sh  generate_win.bat
zsolve/cmake/: iOS.cmake
zsolve/gsl/: gsl_zsolve.c  gsl_zsolve.h
